# liuyao-engine

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
cases/: hexagram-json-contract.md  regression-cases-draft.md
data/: liuyao-glossary.json  yigram-najia-tables.json  卜筮正宗_ctext公有领域全文.txt  增删卜易_ctext公有领域全文.txt
docs/: DESIGN.md
licenses/: yigram-najia-rules-LICENSE.txt
liuyao/: __init__.py  analysis.py  calendar.py  cast.py  chizhi.py  gua_page.py  gua_slug.py  guaxiang.py  hexagram.py  reading.py  relations.py
tests/: test_calendar.py  test_calendar_tz.py  test_cast.py  test_chizhi.py  test_differential.py  test_feifu.py  test_gua_page.py  test_gua_relations.py  test_guaxiang.py  test_hexagram.py  test_reading.py
