[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liuyao-engine"
version = "0.1.0"
description = "Deterministic I Ching (Liu Yao) hexagram engine — 六爻装卦/断法/历法确定性引擎，与 najia 交叉验证"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jincheng Xie" }]
keywords = ["liuyao", "najia", "yijing", "iching", "divination", "hexagram", "六爻", "纳甲"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    "sxtwl>=2.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "lunar-python>=1.3.0",
    "najia>=0.0.9",
]

[project.urls]
Homepage = "https://yaomancy.com"
Repository = "https://github.com/yaomancy/liuyao-engine"

[tool.hatch.build.targets.wheel]
packages = ["liuyao"]
